[package]
name = "particlev1"
version = "0.1.0"
edition = "2022"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.9.1", features = [
    "bevy_gilrs",
    "bevy_winit",
    "render",
    "png",
    "hdr",
    "vorbis",
    "x11",
    "filesystem_watcher",
    "trace"
     ] }

bevy_kira_audio = { version = "0.13", features = ["ogg", "wav"] }
bevy-inspector-egui = "0.14"
serde = "1.0"
ron = "0.8"
rand = "0.8"
